Added Images to Page

--- a/highlands.html
+++ b/highlands.html
@@ -2188,7 +2188,7 @@
                     </div>
                     <div class="flex-center">
                       <div>
-                        <img class="npc-img img-map-height" src="Images/Maps/Parian.png" alt="Parian Map">                        
+                        <img class="npc-img img-map-height" src="Images/Maps/Parian.png" width="200" alt="Parian Map">                        
                       </div>
                     </div>
                   </div>                  
@@ -2273,7 +2273,15 @@
                   <div>
                     <p><span class="num-color-teal">Carpenter Shop</span></p>
                     <img class="npc-img" src="Images/NPC/Town/Parian_Welatrem.png" alt="Loeband">  
-                  </div>          
+                  </div>  
+                  <div>
+                    <p><span class="num-color-teal">Ship Yard</span></p>
+                    <img class="npc-img" src="Images/NPC/Town/Parian_Arthuren.png" alt="Arthuren">  
+                  </div>  
+                  <div>
+                    <p><span class="num-color-teal">Jewelers Shop</span></p>
+                    <img class="npc-img" src="Images/NPC/Town/Parian_Maggie_Hobson.png" alt="Maggie Hobson">  
+                  </div>       
                 </div> 
                 <hr>  
                   <div>
@@ -2287,6 +2295,15 @@
                     <img class="npc-img" src="Images/NPC/Town/Guard.png" alt="Guard"> 
                   </div>
                   <div>
+                    <img class="npc-img" src="Images/NPC/Town/Royal_Guard.png" alt="Royal Guard"> 
+                  </div>
+                  <div>
+                    <img class="npc-img" src="Images/NPC/Town/Elite_Guard.png" alt="Elite Guard"> 
+                  </div>
+                  <div>
+                    <img class="npc-img" src="Images/NPC/Town/Lotorian_Knight.png" alt="Lotorian Knight"> 
+                  </div>
+                  <div>
                     <img class="npc-img" src="Images/NPC/Town/Town_Wizard_Of_Insight.png" alt="Town Wizard of Insight">  
                   </div>
                   <div>
@@ -2296,7 +2313,7 @@
                     <img class="npc-img" src="Images/NPC/Town/Parian_Clagwort.png" alt="Clagwort"> 
                   </div>  
                   <div> 
-                    <img class="npc-img" src="Images/NPC/Town/Parian_Defree.png" alt="De'Free"> 
+                    <img class="npc-img" src="Images/NPC/Town/Parian_DeFree.png" alt="De'Free"> 
                   </div>           
                   <div> 
                     <img class="npc-img" src="Images/NPC/Town/Parian_Diriken.png" alt="Diriken"> 
@@ -2372,6 +2389,18 @@
                   </div>
                   <div> 
                     <img class="npc-img" src="Images/NPC/Town/Parian_Jace.png" alt="Jace"> 
+                  </div>
+                  <div> 
+                    <img class="npc-img" src="Images/NPC/Town/Parian_Terrance_Jaffy.png" alt="Terrance Jaffy"> 
+                  </div>
+                  <div> 
+                    <img class="npc-img" src="Images/NPC/Town/Parian_Nessa.png" alt="Nessa"> 
+                  </div>
+                  <div> 
+                    <img class="npc-img" src="Images/NPC/Town/Parian_Lucia.png" alt="Lucia"> 
+                  </div>
+                  <div> 
+                    <img class="npc-img" src="Images/NPC/Town/Parian_Stephan.png" alt="Stephan"> 
                   </div>
                 </div>
                   <hr>
