Completed Favorable Dealings Quest

--- a/highlands.html
+++ b/highlands.html
@@ -1180,9 +1180,21 @@
                     <img class="npc-img" src="Images/NPC/Town/Arda_Arvanion.png" alt="Arvanion">  
                   </div>
                   <div>
-                    <img class="npc-img" src="Images/NPC/Town/Arda_Asicrel.png" alt="Asicrel">  
+                    <img class="npc-img" src="Images/HighLands/Favorable_Dealings_Asicrel.png" alt="Asicrel">  
                   </div>            
                 </div>
+
+                <hr>  
+                  <div>
+                    <h2 id="questNpcs" class="anchor text-center">Arda Town People of Interest</h2>
+                  </div>           
+                <div class="flex-wrapper">
+                  <div>
+                    <p><span class="num-color-green">Favorable Dealings Quest NPC</span></p>
+                    <img class="npc-img" src="Images/HighLands/Favorable_Dealings_Asicrel.png" alt="Asicrel">  
+                  </div>            
+                </div>
+
                   <hr>
                   <div>
                     <h2 id="questNpcs" class="anchor text-center">Arda Quest NPCs</h2>
@@ -1483,7 +1495,94 @@
                 </div>
               </div>
               <!-- End of Struggling -->
-              <div class="line"></div>   
+              <div class="line"></div> 
+              <!-- Start of Favorable Dealings  -->
+              <div class="card bg-main half-width mb-5">
+                <div class="card-header">
+                  <h2 id="favorableDealings" class="anchor text-center">Favorable Dealings</h2>
+                </div>
+                <div>
+                  <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Highland</td>
+                          <td>Krog</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Difficulty</th>
+                          <th>Skills</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Apprentice</td>
+                          <td>Travel</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>NPC Quest Start</th>
+                          <th>Reward</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>
+                            Ambassador to Krog
+                          </td>
+
+                          <td>
+                          <img class="thumbnail-img" src="Images/HighLands/Favorable_Dealings_500_Gold.png" alt="Gold" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/HighLands/Favorable_Dealings_500_Gold.png' alt='Gold 500'>">                        
+                          <br>                        
+                        </td>                        
+                    </table>
+
+                    <hr>
+                    <p class="clearfix">
+                        <img class="npc-img" src="Images/HighLands/Favorable_Dealings_Ambassador_to_Krog.png" alt="Ambassador to Krog">
+                        <span class="light-red">Ambassador to Krog:</span> Hello adventurer! I was wondering if I could trouble you for a moment?
+                        <br>
+                        <span class="green">Player:</span> <span class="player-text-color"> Sure</span> 
+                        <br>
+                        <span class="light-red">Ambassador to Krog:</span> First, allow me to introduce myself. I am the Arda Ambassador to Krog. I was sent here to convince Lord Targon to agree to a joint effort in creating irrigation channels between our fair towns.
+                         Lord Targon has been most pleasant to deal with and he is eager to begin. By creating thse irrigation channels we can ensure the lands between Arda and Krog will be fertile and green.
+                          The lands will be able to support a variety of crops growing enough to feed all of our citizens. This is indeed a very big step in creating strong relations with our neighbors, as well as helping out some of the less fortunate citizens.
+                           I wonder if you could deliver word to my partner in Arda? His name is Asicrel and he can be found in the town. Bring him the good news and I am sure you will be rewarded for your efforts. Take heed, however. The path from Krog to Arda is beset with many evils. Do take good care of yourself, and thank you.
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Favorable Dealings</span><span class="orange">, Bring news of the favorable dealings to Asicrel in Arda.</span>
+                      </p>
+                    <hr>
+                    <p class="clearfix">  
+                      <img src="Images/HighLands/Favorable_Dealings_Map_To_Arda.png" alt="Map to Arda" height="300px" width="500px">
+                      <br>
+                        Head north out of Krog following the path marked on the map. There are many different types of monsters on the way; as long as you follow the path you should be fine to just run past them if you don't want to fight them.
+                        <span class="light-red">Asicrel</span> is located in the northwest side of the town. Once you speak to him the quest will end.
+                     </p>
+                        <hr>
+                      <p class="clearfix">
+                        <img class="npc-img" src="Images/HighLands/Favorable_Dealings_Asicrel.png" alt="Asicrel">
+                        <span class="light-red">Asicrel:</span> That is very good news! Take this gold as a reward for making such a dangerous journey.
+                      <hr>
+                      <ul>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2 green">GOLD RECEIVED: 500 gold</span></li>                        
+                      </ul>
+                      <hr>                                
+                    </p>
+                    <p class="mt-4 py-3 text-center quest-complete">
+                      Quest Complete
+                    </p>
+                       You were paid by Asicrel of Arda for delivering the message.
+                  </div>
+                </div>
+              </div>
+              <!-- End of Favorable Dealings -->
+              <div class="line"></div>     
               <!-- Start of Valekar's Fortress -->
               <div class="card bg-main half-width mb-5">
                 <div class="card-header">
