Added images to highlands page

--- a/highlands.html
+++ b/highlands.html
@@ -86,6 +86,9 @@
                       <a href="#struggling">Struggling</a>
                     </li>
                     <li>
+                      <a href="#favorableDealings">Favorable Dealings</a>
+                    </li>
+                    <li>
                       <a href="#valekarsFortress">Valekar's Fortress</a>
                     </li>
                   </ul>
@@ -96,6 +99,9 @@
                       <li>
                           <a href="#grell">Grell</a>
                       </li>
+                      <li>
+                        <a href="#shinyThings">Shiny Things</a>
+                    </li>
                   </ul>
                 </li>
                 <li>
@@ -184,6 +190,7 @@
                              <li><a class="head" href="#hooky">Hooky</a></li>
                              <li><a class="head" href="#shovelTrouble">Shovel Trouble</a></li>
                              <li><a class="head" href="#struggling">Struggling</a></li>
+                             <li><a class="head" href="#favorableDealings">Favorable Dealings</a></li>
                              <li><a class="head" href="#valekarsFortress">Valekar's Fortress</a></li>
                           </ul>
                           <!-- menu-submenu accordon-content-->
@@ -194,6 +201,7 @@
                          <!-- accordion-toggle -->
                          <ul class="menu-submenu accordion-content">
                             <li><a class="head" href="#Grell">Grell</a></li>
+                            <li><a class="head" href="#shinyThings">Shiny Things</a></li>
                          </ul>
                          <!-- menu-submenu accordon-content-->
                          <li id="nav4" class="toggle accordion-toggle"> 
@@ -1759,13 +1767,120 @@
                     </div>
                     <div>
                       <img class="npc-img" src="Images/NPC/Town/Grell_Disciple_of_Agon.png" alt="Disciple of Agon">  
-                    </div>
-          
+                    </div>          
                   </div>
+                  <hr>
+                  <div>
+                    <h2 id="questNpcs" class="anchor text-center">Grell Quest NPCs</h2>
+                  </div>           
+                <div class="flex-wrapper">
+                  <div>
+                    <p><a href="#shinyThings"><span class="num-color-teal">1.</span> Vadren</a></p>
+                    <img class="npc-img" src="Images/HighLands/Shiny_Things_Vadren.png" alt="Vadren">  
+                  </div>
+                 
+                </div> 
+                <hr>
                </div>
                 <!-- End of Grell Map and NPCs -->
               </div>
-              <div class="line"></div>   
+              <div class="line"></div> 
+              <!-- Start of Favorable Dealings  -->
+              <div class="card bg-main half-width mb-5">
+                <div class="card-header">
+                  <h2 id="shinyThings" class="anchor text-center">Shiny Things</h2>
+                </div>
+                <div>
+                  <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Highland</td>
+                          <td>Grell</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Difficulty</th>
+                          <th>Skills</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Apprentice</td>
+                          <td>Combat</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>NPC Quest Start</th>
+                          <th>Reward</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>
+                            Vadren
+                          </td>
+
+                          <td>
+                          <img class="thumbnail-img" src="Images/HighLands/Shiny_Things_Vadrens_Slicer.png" alt="Vadren Slicer" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/HighLands/Shiny_Things_Vadrens_Slicer_Stats.png' alt='Vadrens Slicer Stats'>">                        
+                          <br>                        
+                        </td>                        
+                    </table>
+
+                    <hr>
+                    <p class="clearfix">
+                        <img class="npc-img" src="Images/HighLands/Shiny_Things_Vadren.png" alt="Vadren">
+                        <span class="light-red">Vadren:</span> You look like the type that likes shiny things... If you are interested in killing some spiders for me, I might just give you a secret that comes with a great reward. 
+                        <br>
+                        <span class="green">Player:</span> <span class="player-text-color"> Yes, sounds like an easy task.</span> 
+                        <br>
+                        <span class="light-red">Vadren:</span> Good, good. Go forth and kill 10 Black Widow Hatchlings for me. They are making it hard to collect my favorite gems...rubies! 
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Shiny Things</span><span class="orange">, Make it easier for Vadren of Grell to collect gems. Hunt 10 Black Widow Hatchlings.</span>
+                      </p>
+                    <hr>
+                    <p class="clearfix">  
+                      <img class="monster-img" src="Images/NPC/Monsters/Black_Widow_Hatchling.png" alt="Black Widow Hatchling" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/NPC/Monsters/Black_Widow_Hatchling_Stats.png' alt='Black Widow Hatchling Stats'>">
+                      <br>
+                        Head to KROG and use the LSP portal to then go to Whisperdale. Out side of Whisperdale are many spawns of <span class="red">Black Widow Hatchlings</span>. As you kill them you will be updated <span class="green">you have killed 10 Black Widow Hatchlings for Vadren!</span>
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Shiny Things</span><span class="orange">, Return to Vadren in Grell to complete the quest!</span>
+                        <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">3,960</strong> Experience Pool <span class="light-red">experience may very</span></li>                        
+                        </ul>
+                      </p>
+                        <hr>
+                      <p class="clearfix">
+                        <img class="npc-img" src="Images/HighLands/Shiny_Things_Vadren.png" alt="Vadren">
+                        <span class="light-red">Vadren:</span> Wonderful news! You have killed those pesky spiders for me. Now here is your next challenge! Hand me three of y favorite gems and I shall reward you!
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Shiny Things</span><span class="orange">, Bring Vadren 3 of her favorite gems...</span>
+                        <br>
+                        Vadren's favorite gem is a <img src="Images/HighLands/Shiny_Things_Rubies.png"> ruby. You can mine them from rocks or get them as a drop from monsters. Once you have three return to Vadren and drop them on her to collect your reward.
+                        <br> 
+                        <span class="light-red">Vadren:</span> Ah, you have learned of my love of the blood-red ruby... 
+                        <hr>
+                      <ul>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2 green">ITEM RECEIVED: Vadren's Slicer</span></li>
+                        <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">7,920</strong> Experience Pool <span class="light-red">experience may very</span></li>                        
+                      </ul>
+                      <hr>                                
+                    </p>
+                    <p class="mt-4 py-3 text-center quest-complete">
+                      Quest Complete
+                    </p>
+                       Vadren gave you a Stiletto in exchange for the rubies.
+                  </div>
+                </div>
+              </div>
+              <!-- End of Favorable Dealings -->
+              <div class="line"></div>  
               <div>
                 <!-- Ethera Palace Quest Map and Location -->
                 <div class="card bg-main half-width mb-5">
