Added Images to darkWoods Page

--- a/darkWoods.html
+++ b/darkWoods.html
@@ -447,13 +447,54 @@
                   </div>
                   <hr>
                   <div>
-                    <h2 id="questNpcs" class="anchor text-center">Autumn Town People</h2>
+                    <h2 id="questNpcs" class="anchor text-center">Autumn Shop Owners</h2>
+                  </div>                  
+                <div class="flex-wrapper">
+                  <div>
+                    <p><span class="num-color-teal">Pub</span></p>
+                    <img class="npc-img" src="Images/NPC/Town/Autumn_Sylvax.png" alt="Sylvax">  
+                  </div>
+                  <div>
+                    <p><span class="num-color-teal">Weaponry Shop</span></p>
+                    <img class="npc-img" src="Images/NPC/Town/Autumn_Xatak.png" alt="Xatak">  
+                  </div>
+                  <div>
+                    <p><span class="num-color-teal">Leatherworking Shop</span></p>
+                    <img class="npc-img" src="Images/NPC/Town/Autumn_Narzil.png" alt="Narzil">  
+                  </div>
+                  <div>
+                    <p><span class="num-color-teal">Carpenter Shop</span></p>
+                    <img class="npc-img" src="Images/NPC/Town/Autumn_Dolbrax.png" alt="Dolbrax">  
+                  </div>
+                  <div>
+                    <p><span class="num-color-teal">Provisioner Shop</span></p>
+                    <img class="npc-img" src="Images/NPC/Town/Autumn_Varyana.png" alt="Varyana">  
+                  </div>  
+                  <div>
+                    <p><span class="num-color-teal">Magic Shop</span></p>
+                    <img class="npc-img" src="Images/NPC/Town/Autumn_Malkoron.png" alt="Malkoron">  
+                  </div>  
+                  <div>
+                    <p><span class="num-color-teal">Jewelry Shop</span></p>
+                    <img class="npc-img" src="Images/NPC/Town/Autumn_Larcie_Nightwind.png" alt="Larcie Nightwind">  
+                  </div>     
+                </div> 
+                <hr>  
+                  <div>
+                    <h2 id="questNpcs" class="anchor text-center">Autumn & Hunting Lodge Town People</h2>
                   </div>
                   <div class="flex-wrapper">
                     <div>
-                      <img class="npc-img" src="Images/NPC/Town/Autumn.png" alt="Holder">  
+                      <img class="npc-img" src="Images/NPC/Town/Autumn_Eva.png" alt="Eva">  
                     </div>
-                  </div> 
+                    <div>
+                      <img class="npc-img" src="Images/NPC/Town/Autumn_Xemuel.png" alt="Xemuel">  
+                    </div>
+                    <div>
+                      <img class="npc-img" src="Images/NPC/Town/Hunting_Lodge_Ursos.png" alt="Ursos">  
+                    </div>
+                  </div>
+                  <hr> 
                   <div>
                     <h2 id="questNpcs" class="anchor text-center">Autumn & Hunting Lodge Quest NPCs</h2>
                   </div> 
@@ -482,47 +523,67 @@
                       <p><a href="#noisyNeighbors"><span class="num-color-teal">12.</span> Vesos</a></p>
                       <img class="npc-img" src="Images/Darkwoods/Noisy_Neighbors_Vesos.png" alt="Vesos">  
                     </div>
-                  </div> 
-                </div> 
-                <div>
-                  <h2 id="questNpcs" class="anchor text-center">Autumn Archery Trainers Quest NPCs</h2>
+                  </div>
+                  <hr> 
+                  <div>
+                    <h2 id="questNpcs" class="anchor text-center">Autumn Archery Trainers Quest NPCs</h2>
+                  </div>
+                  <div class="flex-wrapper">
+                    <div>
+                      <p><a href="#slowAndSteady"><span class="num-color-red">4.</span> Rigel Underdark</a></p>
+                      <img class="npc-img" src="Images/Darkwoods/Slow_And_Steady_Rigel_Underdark.png" alt="Rigel Underdark">  
+                    </div>
+                    <div>
+                      <p><a href="#loadingTheSling"><span class="num-color-red">6.</span> Alithian Leafwhisper</a></p>
+                      <img class="npc-img" src="Images/Darkwoods/Loading_The_Sling_Alithian_Leafwhisper.png" alt="Alithian Leafwhisper">  
+                    </div>
+                  </div>
                 </div>
+                <hr>
+                <div class="card-body img-card-body">
+                  <div>
+                    <h2 id="autumnHuntingLodge" class="anchor text-center">Lord Vezryl Estate</h2>
+                  </div>
+                  <div class="flex-center">
+                    <div>
+                      <img class="npc-img img-map-height" src="/Images/Darkwoods/Lord_Vezryl_Estate_Map.png" alt="Autumn & Hunting Lodge Map">                        
+                    </div>
+                  </div>
+                  <hr>
+                  <div>
+                    <h2 id="questNpcs" class="anchor text-center">Lord Vezryl Estate Shop Owners</h2>
+                  </div>                  
                 <div class="flex-wrapper">
                   <div>
-                    <p><a href="#slowAndSteady"><span class="num-color-red">4.</span> Rigel Underdark</a></p>
-                    <img class="npc-img" src="Images/Darkwoods/Slow_And_Steady_Rigel_Underdark.png" alt="Rigel Underdark">  
+                    <p><span class="num-color-teal">Pub</span></p>
+                    <img class="npc-img" src="Images/NPC/Town/Lord_Vezryl_Estate_Golgaste.png" alt="Golgaste">  
                   </div>
                   <div>
-                    <p><a href="#loadingTheSling"><span class="num-color-red">6.</span> Alithian Leafwhisper</a></p>
-                    <img class="npc-img" src="Images/Darkwoods/Loading_The_Sling_Alithian_Leafwhisper.png" alt="Alithian Leafwhisper">  
+                    <p><span class="num-color-teal">Leatherworking Shop</span></p>
+                    <img class="npc-img" src="Images/NPC/Town/Lord_Vezryl_Estate_Alaven.png" alt="Alaven">  
                   </div>
-                </div>                 
-                <div>
-                  <div class="card-body img-card-body">                   
-                    <hr>
-                    <div>
-                      <h2 id="questNpcs" class="anchor text-center">Quest NPCS</h2>
-                    </div>
-                    <div class="flex-wrapper">
-                      <div>
-                        <div>
-                          <p class="text-center">Lord Vezryl Estate</p>
-                          <img class="npc-img img-map-height" src="/Images/Darkwoods/Lord_Vezryl_Estate_Map.png" alt="Lord Vezryl Estate Map">
-                        </div>   
-                      </div>
-                   </div>                  
+                 </div> 
+                 <hr>
+                 <div>
+                  <h2 id="questNpcs" class="anchor text-center">Lord Vezryl Estate Town People</h2>
+                </div> 
+                 <div class="flex-wrapper">
+                  <div>
+                    <img class="npc-img" src="Images/Darkwoods/Knight_of_Whisperdale_Lady_Vezryl.png" alt="Lady vezryl">  
                   </div>
-                </div>
-                             
-
+                  <div>
+                    <img class="npc-img" src="Images/NPC/Town/Lord_Vezryl_Estate_Tarryn.png" alt="Tarryn">  
+                  </div>
+                  <div>
+                    <img class="npc-img" src="Images/NPC/Town/Lord_Vezryl_Estate_Vanimar.png" alt="Vanimar">  
+                  </div>
+                 </div> 
+                </div>      
                 <hr>
                 <div class="card-header">
                   <h1 id="blackSwampMap" class="anchor text-center">Archery Trainers</h1>
                 </div>
-
                 <div class="flex-wrapper">
-                  
-
                   <div>
                     <p><a href="#stickJab"><span class="num-color-red">3.</span> Ellini Shadevail</a></p>
                     <img class="npc-img" src="Images/Darkwoods/Stick_Jab_Ellini_Shadevail.png" alt="Ellini Shadevail">  
