updated highlands and darkWoods

--- a/darkWoods.html
+++ b/darkWoods.html
@@ -111,6 +111,9 @@
                   </ul>
                 </li>
                 <li>
+                  <a href="#lordVezrylEstate">Lord Vezryl Estate</a>
+                </li>
+                <li>
                   <a href="#combatSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Archery Trainers</a>
                   <ul class="collapse list-unstyled" id="combatSubmenu">
                       <li>
@@ -542,7 +545,7 @@
                 <hr>
                 <div class="card-body img-card-body">
                   <div>
-                    <h2 id="autumnHuntingLodge" class="anchor text-center">Lord Vezryl Estate</h2>
+                    <h2 id="lordVezrylEstate" class="anchor text-center">Lord Vezryl Estate</h2>
                   </div>
                   <div class="flex-center">
                     <div>
@@ -581,7 +584,7 @@
                 </div>      
                 <hr>
                 <div class="card-header">
-                  <h1 id="blackSwampMap" class="anchor text-center">Archery Trainers</h1>
+                  <h1 class="anchor text-center">Lord Vezryl Archery Trainers</h1>
                 </div>
                 <div class="flex-wrapper">
                   <div>
