--- a/highlands.html
+++ b/highlands.html
@@ -2670,7 +2670,7 @@
                   </div>
                   <div>
                     <p><a href="#"><span class="num-color-teal">2.</span> Warlord Cheroth</a></p>
-                    <img class="npc-img" src="Images/ValleyoftheGiants/Warlord_Cheroth.png" alt="Warlord Cheroth">  
+                    <img class="npc-img" src="Images/HighLands/" alt="Warlord Cheroth">  
                   </div>
                   <div>
                     <p><a href="#"><span class="num-color-teal">3.</span> Warlord Uerog</a></p>
@@ -2678,7 +2678,7 @@
                   </div>
                   <div>
                     <p><a href="#"><span class="num-color-teal">4.</span> Warlord Isbraen</a></p>
-                    <img class="npc-img" src="Images/ValleyoftheGiants/Warlord_Isbraen.png" alt="Warlord Isbraen">  
+                    <img class="npc-img" src="Images/HighLands/Fury_Flight_Warlord_Isbraen.png" alt="Warlord Isbraen">  
                   </div>
                 </div> 
                 <hr>
